<resources>
    <string name="app_name">Lead On</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_signed_up">Already Signed Up?</string>
    <string name="or">OR</string>
    <string name="version_no">Version 1.0</string>
    <string name="logout">Logout</string>
    <string name="offer_image">Offer Image</string>
    <string name="hamburger">hamburger</string>
    <string name="resume_course">Resume Course</string>
    <string name="see_all_courses">See All Courses</string>
    <string name="go_to_website">Go to Website</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="sign_in_failed">Sign in Failed</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="unable_to_send_authentication_email">Unable to send authentication email. Please try again.</string>
    <string name="email_cannot_be_blank">Email cannot be blank</string>
    <string name="please_input_a_valid_email_address">Please input a valid email address</string>
    <string name="password_cannot_be_blank">Password cannot be blank</string>
    <string name="password_must_be_more_than_8_characters">Password must be more than 8 characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_one_of_the_below_tests">Take one of the below tests or surveys to understand what SimpliLearn courses are best suited for you
    </string>
    <string name="personality_test">Personality Test</string>
    <string name="survey">Survey</string>
    <string name="sweepstakes">Sweepstakes</string>
    <string name="referral_message">Hey, Join me on SimpliLearn and get a boost in your career.
        Use code %s and get Rs. 500 off on your first course. Register now on https://www.simplilearn.com
    </string>
    <string name="courses_not_implemented_yet">Courses not implemented yet</string>
    <string name="password_reset_email_has_been_sent">Password reset email has been sent to your email ID</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="title_activity_personality_test">Personality Test</string>
    <string name="continue_text">Continue</string>
    <string name="skip">Skip</string>
    <string name="no_sweepstakes_available">No Sweepstakes available at the moment</string>
    <string name="no_trivia_available">No Trivia available at the moment</string>
    <string name="no_survey_available">No Survey available at the moment</string>
    <string name="the_test_is_complete_thank_you_for_participating">The test is complete. Thank you for participating.</string>
    <string name="register_for_discounts">Register for Discounts</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="details_saved">Your details have been stored. You will receive an email with the offer code shortly</string>
    <string name="authentication_email_sent">An authentication email has been sent to your email ID.</string>
</resources>
