<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resume_course"
            android:title="@string/resume_course" />
        <item
            android:id="@+id/nav_all_courses"
            android:title="@string/see_all_courses" />
        <item
            android:id="@+id/nav_goto_website"
            android:title="@string/go_to_website" />
        <item
            android:id="@+id/nav_rate_app"
            android:title="@string/rate_app" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
